# ToyPhysics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: build.yaml
physics/: CMakeLists.txt
physics/src/: body.cpp  geometry.cpp  log.cpp  pose.cpp  shape.cpp  toy_physics.cpp
physics/toy_physics/: body.hpp  geometry.hpp  log.hpp  math.hpp  pose.hpp  shape.hpp
sandbox/: CMakeLists.txt  camera.cpp  camera.hpp  context.cpp  context.hpp  frag.spv  main.cpp  sdl_call.hpp  shader.frag  shader.vert  vert.spv  vertex.hpp
toy_engine/: CMakeLists.txt
toy_engine/include/: body.hpp  engine.hpp  scene.hpp
toy_engine/src/: body.cpp  scene.cpp
